fix(css) Fix .page-header__heading align-items

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -39,11 +39,10 @@ $gutter: 30px;
 
 .page-header__heading {
   display: flex;
-  align-items: flex-end;
+  align-items: baseline;
 }
 
 .page-header__addons {
   margin-left: 6px;
-  margin-bottom: 3px;
   opacity: .4;
 }
